edits in expt 3

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -506,7 +506,27 @@ Finally, with \emph{heavy}, we found that different subject nouns yielded differ
 
 \section{Experiment 3: Manipulating context}
 
-If physical arrangements are less likely to change, collective properties become more predictable. And with more predictable collective properties, the truth values of statements involving them become more stable, so collective interpretations are less noisy and stand a better chance of being informative. These interpretations should therefore become more likely. If speakers lack knowledge to verify one of two possible interpretations, the epistemically-supported interpretation should become more likely. In Expt.~3, we manipulated predictability and speakers' access to knowledge through a series of context scenarios, and used the paraphrase endorsement method from Expt.~1 to test the availability of collective interpretations.
+% And with more predictable collective properties, the truth values of statements involving them become more stable, so collective interpretations are less noisy and stand a better chance of being informative. These interpretations should therefore become more likely. 
+%If speakers lack knowledge to verify one of two possible interpretations, the epistemically-supported interpretation should become more likely. In Expt.~3, we manipulated predictability and speakers' access to knowledge through a series of context scenarios, and used the paraphrase endorsement method from Expt.~1 to test the availability of collective interpretations.
+
+Physical properties of collections will tend to be more predictable when the physical arrangement is more predictable. 
+According to our hypothesis, greater predictability should lead to more collective interpretation.
+For instance, if collections of certain boxes are always stacked neatly, the collective height of a stack can be stably predicted (as the sum of individual heights); if these boxes come in jumbled-up piles the collective height is less predictable.
+In Expt.~3 we manipulate expectations about arrangement of boxes, using the paraphrase methodology to test the effect on interpretation of plural predications. We expect to see an effect on \emph{tall}, whose collective property is the direct target of our manipulation; we also expect to see a more moderate effect on \emph{big} to the extent that big can refer to height; we expect no effect on \emph{heavy}, which is stable regardless of arrangement.
+
+In Expt.~3 we also return to the effect of speaker's knowledge. Recall the prediction of our pragmatic hypothesis, that more collective interpretations should attain when the speaker lacks knowledge about individual object properties (but has knowledge about collective properties). We conjectured that the effect of \emph{heavy}'s subject nouns in Expt.~2 was due to knowledge in this way: for smaller objects the likelihood of interacting with them individually is lower, making the likelihood of individual weight knowledge lower.
+In Expt.~1 we attempted to manipulate the likelihood that the speaker had interacted with the boxes individually, via the ``inspect'' scenario, versus only collectively, in the ``move'' scenario. We found a trend in the predicted direction that did not achieve significance.
+It is possible that this effect was real, but small because of a bias for the distributive referent (leading to a floor effect).
+In Expt.~3 we repeat the move/inspect manipulation, using the pure paraphrase dependent measure of Expt.~2, which may have greater sensitivity.
+
+%---where ``move'' scenarios dis-privileged distributive knowledge and therefore had greater rates of collective interpretations
+%
+% ---where collective interpretations appeared to increase as probability of collective knowledge increased
+%
+%If contextual predictability of collective properties influences the availability of collective interpretations, we should find that regular arrangement contexts yield more collective interpretations, resulting in higher endorsement rates for the collective paraphrase with \emph{together}. This effect ought to hold for the predicates \emph{big} and \emph{tall}---\emph{heavy} is already strongly contextually predictable, so we might not be able to increase its predictability. The predicate \emph{tall} should be the most sensitive to our context manipulation because we introduce regularity into its dimension of measurement directly: stacking boxes on top of each other to make collective height particularly salient.
+%
+%Given the trending effect of speaker access to knowledge with \emph{heavy} in Expt.~1---where ``move'' scenarios dis-privileged distributive knowledge and therefore had greater rates of collective interpretations---and the significant effect with \emph{heavy}'s subject nouns in Expt.~2---where collective interpretations appeared to increase as probability of collective knowledge increased---we should find a similar effect here: collective paraphrase endorsement for \emph{heavy} should be greater in ``move'' scenarios where distributive knowledge is lacking, independent of the regularity of the context. We have no reason to expect a similar effect for the other two predicates, due to the visual assessability of their corresponding properties, and their insensitivity to the scenario manipulation in Expt.~1.
+
 
 \subsection{Participants}
 
@@ -532,10 +552,10 @@ Also between subjects, we manipulated the variability of the \textsc{context} (`
 \end{figure}
 
 
-After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale. The paraphrases were either distributive (with  ``each'') or collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent of the utterance visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}.
+After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale (as in Expt.~2). The paraphrases were either distributive (with  ``each'') or collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent of the utterance visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}.
 
 
-\ndg{links to expts?}
+\ndg{links to expts? should add for all of them...}
 
 \begin{figure}[h]
 \centering
@@ -543,17 +563,20 @@ After observing the dispenser in action via the context  scenarios, participants
 \caption{Example ``big'' trial.}\label{trial}
 \end{figure}
 
-\subsection{Predictions}
-
-\ndg{i don't think we need this section. relevant motivation can go at beginning of this section. it'll be more compact that way. altermatively, make it shorter and more specific (we predict an interaction between blah and blah, etc).}
-
-If contextual predictability of collective properties influences the availability of collective interpretations, we should find that regular arrangement contexts yield more collective interpretations, resulting in higher endorsement rates for the collective paraphrase with \emph{together}. This effect ought to hold for the predicates \emph{big} and \emph{tall}---\emph{heavy} is already strongly contextually predictable, so we might not be able to increase its predictability. The predicate \emph{tall} should be the most sensitive to our context manipulation because we introduce regularity into its dimension of measurement directly: stacking boxes on top of each other to make collective height particularly salient.
-
-Given the trending effect of speaker access to knowledge with \emph{heavy} in Expt.~1---where ``move'' scenarios dis-privileged distributive knowledge and therefore had greater rates of collective interpretations---and the significant effect with \emph{heavy}'s subject nouns in Expt.~2---where collective interpretations appeared to increase as probability of collective knowledge increased---we should find a similar effect here: collective paraphrase endorsement for \emph{heavy} should be greater in ``move'' scenarios where distributive knowledge is lacking, independent of the regularity of the context. We have no reason to expect a similar effect for the other two predicates, due to the visual assessability of their corresponding properties, and their insensitivity to the scenario manipulation in Expt.~1.
+%\subsection{Predictions}
+%
+%\ndg{i don't think we need this section. relevant motivation can go at beginning of this section. it'll be more compact that way. altermatively, make it shorter and more specific (we predict an interaction between blah and blah, etc).}
+%
+%If contextual predictability of collective properties influences the availability of collective interpretations, we should find that regular arrangement contexts yield more collective interpretations, resulting in higher endorsement rates for the collective paraphrase with \emph{together}. This effect ought to hold for the predicates \emph{big} and \emph{tall}---\emph{heavy} is already strongly contextually predictable, so we might not be able to increase its predictability. The predicate \emph{tall} should be the most sensitive to our context manipulation because we introduce regularity into its dimension of measurement directly: stacking boxes on top of each other to make collective height particularly salient.
+%
+%Given the trending effect of speaker access to knowledge with \emph{heavy} in Expt.~1---where ``move'' scenarios dis-privileged distributive knowledge and therefore had greater rates of collective interpretations---and the significant effect with \emph{heavy}'s subject nouns in Expt.~2---where collective interpretations appeared to increase as probability of collective knowledge increased---we should find a similar effect here: collective paraphrase endorsement for \emph{heavy} should be greater in ``move'' scenarios where distributive knowledge is lacking, independent of the regularity of the context. We have no reason to expect a similar effect for the other two predicates, due to the visual assessability of their corresponding properties, and their insensitivity to the scenario manipulation in Expt.~1.
 
 \subsection{Results}
 
 Fig.\ \ref{resultsexpt2} displays the raw paraphrase endorsement ratings averaged across all trials with bootstrapped 95\% confidence intervals. For the purpose of analysis, we analyze responses to the collective paraphrases (i.e., the red bars in Fig.~\ref{resultsexpt2}); higher rates of endorsement for the collective paraphrase signal greater rates of collective interpretation.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial).} %calculated the difference between collective and distributive paraphrase endorsement ratings for each trial; Fig.~\ref{normresultsexpt2} presents these difference scores, where greater values of the difference score signal greater rates of collective paraphrase endorsement.
+First note the qualitative effects of our two manipulations: collective interpretations do appear to be greater for \emph{tall} in the regular condition and greater for \emph{heavy} in the move condition.
+
+\ndg{our predictions really are about effect of manipulations on predicates separately, and we don't care much about predicate directly.... so how about doing three separate regressions, one for each predicate? this should be easier to interpret. or is this the same as putting them all together with a predicate predictor?}
 
 \begin{figure}[h!]
 	\centering
@@ -575,11 +598,17 @@ As we would expect if contextual predictability of collective properties influen
 
 For the predicate \emph{heavy}, most striking is its sensitivity to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, presumably because they name properties that are visually assessable, and thus visually accessible.
 
-An outstanding issue that warrants comment concerns the effect of our contextual predictability manipulation. We identified as regular, high-predictability contexts those in which the box dispenser consistently stacked Cubert's boxes. By regularizing the physical arrangement of the relevant sets, we increased the contextual predictability of the collective properties of physical extent named by \emph{big} and \emph{tall}. This increased contextual predictability led to increased collective paraphrase endorsement. However, one might interpret this result differently: in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes). And if \emph{the boxes} referred to a single individual, there never was any collective predication.
+An alternative interpretation of the contextual predictability effect is that in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes); if \emph{the boxes} referred to a single individual, there never was any collective predication.
+Such a representational coercion story raises problems for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}. More importantly it is inconsistent with the \emph{lack} of effect for \emph{heavy}: if the pile of boxes was simply represented as an individual when stacked, we would expect greater collective interpretation for all predicates.
 
-In addition to the host of issues such a representational coercion story raises for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}, the success of our speaker knowledge manipulation speaks directly against it: participants give similarly high distributive endorsement ratings for \emph{heavy} in ``inspect'' scenarios and similarly low distributive endorsement ratings for \emph{heavy} in ``move'' scenarios, regardless of the variability of context. In other words, the speaker knowledge manipulation, which suppresses information about individual set members in ``move'' scenarios, affects random and regular contexts similarly. If regular contexts forced reanalysis of \emph{the boxes} as an assemblage like \emph{the pile}, we would not expect ``move'' vs.~``inspect'' scenarios to privilege or dis-privilege access to information about individual set members; there would only be a single individual available in context.
 
-Taken together, our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic, information-theoretic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are such because the properties they name are unpredictable, or unstable in context. Next, we formalize the role of context in this choice of interpretation using a Bayesian Rational Speech-Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, listeners are less likely to assume interpretations for which speakers lack knowledge.
+%An outstanding issue that warrants comment concerns the effect of our contextual predictability manipulation. We identified as regular, high-predictability contexts those in which the box dispenser consistently stacked Cubert's boxes. By regularizing the physical arrangement of the relevant sets, we increased the contextual predictability of the collective properties of physical extent named by \emph{big} and \emph{tall}. This increased contextual predictability led to increased collective paraphrase endorsement. However, one might interpret this result differently: in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes). And if \emph{the boxes} referred to a single individual, there never was any collective predication.
+%
+%In addition to the host of issues such a representational coercion story raises for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}, the success of our speaker knowledge manipulation speaks directly against it: participants give similarly high distributive endorsement ratings for \emph{heavy} in ``inspect'' scenarios and similarly low distributive endorsement ratings for \emph{heavy} in ``move'' scenarios, regardless of the variability of context. In other words, the speaker knowledge manipulation, which suppresses information about individual set members in ``move'' scenarios, affects random and regular contexts similarly. If regular contexts forced reanalysis of \emph{the boxes} as an assemblage like \emph{the pile}, we would not expect ``move'' vs.~``inspect'' scenarios to privilege or dis-privilege access to information about individual set members; there would only be a single individual available in context.
+
+Taken together, our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic, information-theoretic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are such because the properties they name are unpredictable, or unstable in context. We next formalize the role of context in interpretation of plural predication, using tools from probabilistic modeling.
+
+%Next, we formalize the role of context in this choice of interpretation using a Bayesian Rational Speech-Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, listeners are less likely to assume interpretations for which speakers lack knowledge.
 
 
 
