--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -598,9 +598,8 @@ The experimental context was similar to that of Expt.~1. Participants were first
 
 Between subjects, we manipulated the \textsc{scenario} story (``move'' vs.~``inspect''): Cubert's job was either to move shipments of boxes, or to inspect them. As in Expt.~1, in ``move'' scenarios, Cubert appeared with a dolly with which to carry the boxes. In ``inspect'' scenarios, Cubert appeared without a dolly.
 
-Also between subjects, we manipulated the variability of the \textsc{context} (``regular'' vs.~``random''). In regular contexts, the dispenser consistently stacked boxes on top of each other (Fig.~\ref{expt2context}, left). In random contexts, boxes were dispensed without any consistent physical arrangement (Fig.\ \ref{expt2context}, right). Participants saw four each of either ``regular'' or ``random'' context priming scenarios.
-
-\ndg{do the boxes vary at all in the familiarization aside from arrangement? if so describe.}
+Also between subjects, we manipulated the variability of the \textsc{context} (``regular'' vs.~``random''). In regular contexts, the dispenser consistently stacked boxes on top of each other (Fig.~\ref{expt2context}, left). In random contexts, boxes were dispensed without any consistent physical arrangement (Fig.\ \ref{expt2context}, right). Participants saw a series of four context priming scenarios; in each scenario, they saw a different set of boxes dispensed.
+%\ndg{do the boxes vary at all in the familiarization aside from arrangement? if so describe.}
 
 
 \begin{figure}[h]
@@ -612,7 +611,7 @@ Also between subjects, we manipulated the variability of the \textsc{context} (`
 \end{figure}
 
 
-After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale (as in Expt.~2). The paraphrases were either distributive (with  ``each'') or collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent of the utterance visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}.
+After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale (as in Expt.~2). The paraphrases were either distributive (with  ``each'') or collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent of the utterance visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}. For the analyses reported below, we included data from the 77 participants who indicated that their native language was English.
 
 
 \ndg{links to expts? should add for all of them...}
@@ -633,10 +632,10 @@ After observing the dispenser in action via the context  scenarios, participants
 
 \subsection{Results}
 
-Fig.\ \ref{resultsexpt2} displays the raw paraphrase endorsement ratings averaged across all trials with bootstrapped 95\% confidence intervals. For the purpose of analysis, we analyze responses to the collective paraphrases (i.e., the red bars in Fig.~\ref{resultsexpt2}); higher rates of endorsement for the collective paraphrase signal greater rates of collective interpretation.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial).} %calculated the difference between collective and distributive paraphrase endorsement ratings for each trial; Fig.~\ref{normresultsexpt2} presents these difference scores, where greater values of the difference score signal greater rates of collective paraphrase endorsement.
-First note the qualitative effects of our two manipulations: collective interpretations do appear to be greater for \emph{tall} in the regular condition and greater for \emph{heavy} in the move condition.
+Fig.\ \ref{resultsexpt2} displays the raw paraphrase endorsement ratings averaged across all trials with bootstrapped 95\% confidence intervals. For the purpose of analysis, we analyze responses to the collective paraphrases (i.e., the red bars in Fig.~\ref{resultsexpt2}); higher rates of endorsement for the collective paraphrase signal greater rates of collective interpretation.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.62$).} %calculated the difference between collective and distributive paraphrase endorsement ratings for each trial; Fig.~\ref{normresultsexpt2} presents these difference scores, where greater values of the difference score signal greater rates of collective paraphrase endorsement.
+First note the qualitative effects of our two manipulations: collective interpretations do appear to be greater for \emph{tall} and \emph{big} in the ``regular'' conditions, and greater for \emph{heavy} in the ``move'' conditions.
 
-\ndg{our predictions really are about effect of manipulations on predicates separately, and we don't care much about predicate directly.... so how about doing three separate regressions, one for each predicate? this should be easier to interpret. equivalently we could leave out the main effect predictors for scenario and context, leaving only the interaction terms with predicate. }
+%\ndg{our predictions really are about effect of manipulations on predicates separately, and we don't care much about predicate directly.... so how about doing three separate regressions, one for each predicate? this should be easier to interpret. equivalently we could leave out the main effect predictors for scenario and context, leaving only the interaction terms with predicate. }
 
 \begin{figure}[h!]
 	\centering
@@ -645,18 +644,17 @@ First note the qualitative effects of our two manipulations: collective interpre
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~3.}\label{resultsexpt2}
 \end{figure}
 
+For each predicate, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular''),
+ \textsc{scenario} (``inspect'' vs.~``move''), and \textsc{trial} order; the model also included the interaction between \textsc{context} and \textsc{scenario}. The full regression models appear in Appendix \ref{expt3results}.
+As is apparent in Fig.~\ref{resultsexpt2}, there was a main effect of \textsc{context} for both \emph{big} ($\beta$ = 0.18, $SE$ = 0.07, $t$ = 2.52, p $<$ 0.05) and \emph{tall} ($\beta$ = 0.30, $SE$ = 0.07, $t$ = 4.58, p $<$ 0.01), such that regular contexts had more collective interpretations than did random contexts for these predicates. The effect of \textsc{context} was not significant for \emph{heavy} ($\beta$ = 0.11, $SE$ = 0.07, $t$ = 1.43, p $=$ 0.16), but the effect of \textsc{scenario} was ($\beta$ = 0.19, $SE$ = 0.08, $t$ = 2.54, p $<$ 0.05): \emph{heavy} received more collective interpretations in ``move'' scenarios. No other effects reached significance.
 
-We fit a linear mixed effects model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular''),
-\textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}; with \emph{big} dummy-coded as the reference level),
- \textsc{scenario} (``inspect'' vs.~``move''), and \textsc{trial} order; the model included interactions between \textsc{predicate} and \textsc{context}, and between \textsc{predicate} and \textsc{scenario}. The model also included random intercepts for participants, as well as random slopes for participants grouped by \textsc{trial} (i.e., the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt3results}.
-
-As apparent in Fig.~\ref{resultsexpt2}, there was a main effect of \textsc{context}, so that regular contexts had more collective interpretations than did random contexts ($\beta$ = 0.18, $SE$ = 0.07, $t$ = 2.70, p $<$ 0.01). The model finds a main effect of the contrast between \emph{big} and \emph{tall} ($\beta$ = 0.07, $SE$ = 0.04, $t$ = 2.00, p $<$ 0.05), driven in large part by a marginally significant interaction between \emph{tall} and \textsc{context} ($\beta$ = 0.13, $SE$ = 0.08, $t$ = 1.72, p $=$ 0.09): \emph{tall} was most affected by our contextual manipulation, yielding the greatest rates of collective interpretations in regular contexts. Finally, the model finds a significant interaction between the predicate \emph{heavy} and \textsc{scenario} ($\beta$ = 0.21, $SE$ = 0.08, $t$ = 2.77, p $<$ 0.01): \emph{heavy} received more collective interpretations in ``move'' scenarios.
+%, so that  ($\beta$ = 0.18, $SE$ = 0.07, $t$ = 2.70, p $<$ 0.01). The model finds a main effect of the contrast between \emph{big} and \emph{tall} ($\beta$ = 0.07, $SE$ = 0.04, $t$ = 2.00, p $<$ 0.05), driven in large part by a marginally significant interaction between \emph{tall} and \textsc{context} ($\beta$ = 0.13, $SE$ = 0.08, $t$ = 1.72, p $=$ 0.09): \emph{tall} was most affected by our contextual manipulation, yielding the greatest rates of collective interpretations in regular contexts. Finally, the model finds a significant interaction between the predicate \emph{heavy} and \textsc{scenario} ($\beta$ = 0.21, $SE$ = 0.08, $t$ = 2.77, p $<$ 0.01): 
 
 \subsection{Discussion}
 
 As we would expect if contextual predictability of collective properties influences the viability of collective interpretations, regular contexts had higher ratings for collective paraphrases (and lower ratings for distributive ones). The predicate \textit{tall} was most affected by our contextual manipulation, which directly targeted the height dimension, stacking boxes on top of each other. But \emph{big}, claimed to be stubbornly distributive, is similarly affected: regular contexts yield more collective interpretations. 
 
-For the predicate \emph{heavy}, most striking is its sensitivity to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, presumably because they name properties that are visually assessable, and thus visually accessible.
+For the predicate \emph{heavy}, our contextual predictability manipulation had no measurable effect, presumably because collective weight is already maximally predictable. However, \emph{heavy} was sensitive to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, owing to the fact that they name properties that are visually assessable, and thus visually accessible.
 
 An alternative interpretation of the contextual predictability effect is that in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes); if \emph{the boxes} referred to a single individual, there never was any collective predication.
 Such a representational coercion story raises problems for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}. More importantly it is inconsistent with the \emph{lack} of effect for \emph{heavy}: if the pile of boxes was simply represented as an individual when stacked, we would expect greater collective interpretation for all predicates.
@@ -1022,29 +1020,37 @@ Intercept-trees	& 	0.30	&	0.06	&	4.65	&	\textbf{$<$0.01} \\
 Noun-plants	&	0.00	&   0.06	&	-0.07	&	0.95 \\
 Noun-offspring	&	-0.03	&   0.06	&	-0.55	&	0.59 \\
 Noun-buildings	&	-0.06	&   0.06	&	-1.00	&	0.32 \\
-Noun-windows	&	-0.09	&   0.06	&	-1.52	&	0.13 \\\hline
+Noun-windows	&	-0.09	&   0.06	&	-1.52	&	0.13 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
 \section{Full mixed effects linear regression model from Expt.~3}\label{expt3results}
 
-Table \ref{expt3analysis} presents model coefficients for the full mixed linear regression model used in the analysis of Expt.~3. The model predicts collective endorsement ratings from fixed effects for context, predicate, scenario, and trial, as well as random by-participant intercepts and slopes grouped by trial. The fixed effects predictors were centered before analysis.
+Table \ref{expt3analysis} presents model coefficients for the full linear regression models used in the analysis of Expt.~3. For each predicate, the models predict collective endorsement ratings from fixed effects for context, scenario, trial, and the interaction between context and scenario. The fixed effects predictors were centered before analysis.
 
 \begin{table}[htb] 
-	\centering \caption{Full linear regression model from analysis of Expt.~3.} \label{expt3analysis}
+	\centering \caption{Full linear regression models from analysis of Expt.~3.} \label{expt3analysis}
 \begin{tabular}{lrrrr}\toprule
 	&	Coef $\beta$	&	SE($\beta$)	&	\multicolumn{1}{c}{ \textbf{t}}	&	\multicolumn{1}{c}{$p$}\\ \midrule
-Intercept			& 	0.58	&	0.03	&	17.08&	\textbf{$<$0.01} \\
-Pred-heavy		&	0.02	&   	0.04	&	0.60	&	0.55 \\
-Pred-tall			&	0.07	&	0.04	&	2.00	&	\textbf{$<$0.05}\\
-Context			&	0.18	&	0.07	&	2.70	&	\textbf{$<$0.01}\\
-Scenario			& 	0.00	&	0.07	& 	-0.02	&	0.98 \\
-Trial				&	-0.01	&	0.02  &	-0.36	&   0.72 \\
-Pred-heavy:Context	&	-0.07	&	0.08	&	-0.98	&	0.33 \\
-Pred-tall:Context	&	0.13	&	0.08	&	1.72	& {0.09} \\
-Pred-heavy:Scenario	&	0.21	&	0.08	&	2.77	&	\textbf{$<$0.01} \\
-Pred-tall:Scenario	&	0.07	&	0.08	&	0.95	& 0.35\\
+\emph{\textbf{big}} \\
+Intercept 			& 	0.57 &	0.04	&	15.69	&	\textbf{$<$0.01} \\
+Context			&	0.18	&   0.07	&	2.52&	\textbf{$<$0.05} \\
+Scenario			&	0.00&   0.07	&	0.03	&	0.97 \\
+Trial				&	-0.03	&   0.04	&	-0.67	&	0.51 \\
+Context:Scenario	&	0.21	&   0.15	&	1.43	&	0.16 \\ \hline
+\emph{\textbf{heavy}}\\
+Intercept 			& 	0.61 &	0.04	&	16.47	&	\textbf{$<$0.01} \\
+Context			&	0.11	&   0.07	&	1.43	&	0.16\\
+Scenario			&	0.19&   0.08	&	2.54	&	\textbf{$<$0.05}  \\
+Trial				&	0.02	&   0.05	&	0.42&	0.67 \\
+Context:Scenario	&	-0.12	&   0.15	&	-0.83	&	0.41 \\ \hline
+\emph{\textbf{tall}}\\
+Intercept 			& 	0.66 &	0.03	&	19.99	&	\textbf{$<$0.01} \\
+Context			&	0.30	&   0.07	&	4.58&	\textbf{$<$0.01} \\
+Scenario			&	0.07&   0.07	&	1.11	&	0.27 \\
+Trial				&	-0.01	&   0.04	&	-0.25	&	0.80 \\
+Context:Scenario	&	0.02	&   0.13	&	0.17	&	0.86 \\ 
 \bottomrule
 \end{tabular}
 \end{table}
